--- a/servicios.html
+++ b/servicios.html
@@ -48,7 +48,7 @@
                         <div class="card-body">
                             <h5 class="card-title display-6">Gasfitería</h5>
                             <p class="card-text">Soluciones rápidas y efectivas para todas tus necesidades de plomería, desde fugas hasta nuevas instalaciones.</p>
-                            <a href="servicios/gasfiteria.html" class="btn btn-primary btn-lg mt-3">Ver Proyectos de Gasfitería</a>
+                            <a href="" class="btn btn-primary btn-lg mt-3">Ver Proyectos de Gasfitería</a>
                         </div>
                     </div>
                 </div>
@@ -58,7 +58,7 @@
                         <div class="card-body">
                             <h5 class="card-title display-6">Electricidad</h5>
                             <p class="card-text">Garantizamos seguridad y eficiencia en todas tus instalaciones y reparaciones eléctricas.</p>
-                            <a href="servicios/electricidad.html" class="btn btn-primary btn-lg mt-3">Ver Proyectos de Electricidad</a>
+                            <a href="" class="btn btn-primary btn-lg mt-3">Ver Proyectos de Electricidad</a>
                         </div>
                     </div>
                 </div>
