--- a/construccion.html
+++ b/construccion.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -19,11 +19,11 @@
     <header>
         <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
             <div class="container-fluid">
-                <img src="/img/logo.png" alt="" width="50px" height="50px">
+                <img src="img/logo.png" alt="" width="50px" height="50px">
                 <nav >
-                    <a class="navbar-brand" href="/index.html">Inicio</a>
-                    <a class="navbar-brand" href="/nosotros.html">Nosotros</a>
-                    <a class="navbar-brand" href="/servicios.html">Servicios</a>
+                    <a class="navbar-brand" href="index.html">Inicio</a>
+                    <a class="navbar-brand" href="nosotros.html">Nosotros</a>
+                    <a class="navbar-brand" href="servicios.html">Servicios</a>
                         
                 </nav>
 
@@ -62,13 +62,13 @@
                     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="/img/construccion_1.jpg" class="d-block w-100" alt="...">
+                                <img src="img/construccion_1.jpg" class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="/img/construccion_2.jpg" class="d-block w-100" alt="...">
+                                <img src="img/construccion_2.jpg" class="d-block w-100" alt="...">
                             </div>
                             <div class="carousel-item">
-                                <img src="/img/66e44f0975483.jpeg" class="d-block w-100" alt="...">
+                                <img src="img/66e44f0975483.jpeg" class="d-block w-100" alt="...">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
