--- a/servicios.html
+++ b/servicios.html
@@ -38,7 +38,7 @@
                         <div class="card-body">
                             <h5 class="card-title display-6">Construcción</h5>
                             <p class="card-text">Desde cimientos hasta los últimos acabados, manejamos proyectos de construcción y remodelación de cualquier escala.</p>
-                            <a href="/construccion.html" class="btn btn-primary btn-lg mt-3">Ver Proyectos de Construcción</a>
+                            <a href="construccion.html" class="btn btn-primary btn-lg mt-3">Ver Proyectos de Construcción</a>
                         </div>
                     </div>
                 </div>
